api/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-api
  labels:
    app: calendar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
        - name: calendar-api
          image: ravenbobby/hw16:develop
          ports:
            - containerPort: 8080
            - containerPort: 50051
          volumeMounts:
            - name: config-volume
              mountPath: /app/configs
      volumes:
        - name: config-volume
          configMap:
            name: calendar-config
