api/Deployment_scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-scheduler
  labels:
    app: calendar-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-scheduler
  template:
    metadata:
      labels:
        app: calendar-scheduler
    spec:
      containers:
        - name: calendar-scheduler
          image: ravenbobby/hw16:scheduler
          volumeMounts:
            - name: config-volume
              mountPath: /app/configs
      volumes:
        - name: config-volume
          configMap:
            name: calendar-config
