api/Deployment_sender.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-sender
  labels:
    app: calendar-sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-sender
  template:
    metadata:
      labels:
        app: calendar-sender
    spec:
      containers:
        - name: calendar-sender
          image: ravenbobby/hw16:sender
          volumeMounts:
            - name: config-volume
              mountPath: /app/configs
      volumes:
        - name: config-volume
          configMap:
            name: calendar-config
