api/Security_Contexts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sec-ctx-demo
  namespace: default
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
    - name: sec-ctx-demo
      image: ravenbobby/hw16:develop
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        readOnlyRootFilesystem: true
