api/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
  selector:
    app: calendar
